force-app/main/default/objects/User/fields/Compensation_base__c.field-meta.xml
<CustomField>
    <fullName>Compensation_base__c</fullName>
    <label>Compensation base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>