force-app/main/default/objects/User/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>