force-app/main/default/objects/User/fields/KPI_New_Sales_weight__c.field-meta.xml
<CustomField>
    <fullName>KPI_New_Sales_weight__c</fullName>
    <inlineHelpText>Only relevant to enter for manager and director level for sales</inlineHelpText>
    <label>KPI New Sales weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>