force-app/main/default/objects/User/fields/KPI_Variable_weight__c.field-meta.xml
<CustomField>
    <fullName>KPI_Variable_weight__c</fullName>
    <inlineHelpText>Only relevant to enter for manager and director level for sales</inlineHelpText>
    <label>KPI Variable weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>