force-app/main/default/objects/User/fields/Legacy_Email__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Field used for the reskinning project to populate the old Telia address in order to allow the User email and SSO transition.</description>
    <label>Legacy Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>