force-app/main/default/objects/User/fields/NPS_base__c.field-meta.xml
<CustomField>
    <fullName>NPS_base__c</fullName>
    <description>Only relevant to enter on Manager and Director level - to be used on manager and director dashboard</description>
    <label>NPS base</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>