force-app/main/default/objects/User/fields/NPS_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>NPS_Deadline_Date__c</fullName>
    <formula>IF(
(($CustomMetadata.Telia_Settings__mdt.Settings.NPS_Send_Date_1__c - 
  $CustomMetadata.Telia_Settings__mdt.Settings.NPS_Reminder_days_before_NPS_Send_Date__c ) = TODAY()), 
  ($CustomMetadata.Telia_Settings__mdt.Settings.NPS_Send_Date_1__c - 14),
 IF(
  (($CustomMetadata.Telia_Settings__mdt.Settings.NPS_Send_Date_2__c - 
    $CustomMetadata.Telia_Settings__mdt.Settings.NPS_Reminder_days_before_NPS_Send_Date__c ) = TODAY()), 
   ($CustomMetadata.Telia_Settings__mdt.Settings.NPS_Send_Date_2__c - 14),null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Deadline Date</label>
    <type>Date</type>
</CustomField>