force-app/main/default/objects/User/fields/Portal_User_company_name__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_company_name__c</fullName>
    <formula>Contact.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal User company name</label>
    <type>Text</type>
</CustomField>