force-app/main/default/objects/User/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>The Profile Name of the User. For use in Reports, Dashboards, Flows etc.</description>
    <formula>Profile.Name</formula>
    <inlineHelpText>The Profile Name of the User. For use in Reports, Dashboards, Flows etc.</inlineHelpText>
    <label>Profile Name</label>
    <type>Text</type>
</CustomField>