force-app/main/default/objects/User/fields/Salary2__c.field-meta.xml
<CustomField>
    <fullName>Salary2__c</fullName>
    <description>Yearly Salary of Employee (sum of all quarters)</description>
    <formula>Salary_Q1__c+Salary_Q2__c+Salary_Q3__c+Salary_Q4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yearly Salary of Employee</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>