force-app/main/default/objects/User/fields/Salary_Q3__c.field-meta.xml
<CustomField>
    <fullName>Salary_Q3__c</fullName>
    <description>The summarized quarterly salary (fixed amount)</description>
    <inlineHelpText>The summarized quarterly salary (fixed amount)</inlineHelpText>
    <label>Salary Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>