force-app/main/default/objects/User/fields/Sales_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent_Code__c</fullName>
    <description>Used when posting an order via Order API to ensure the right sales rep is compensated when the order is created in the billing systems</description>
    <label>Sales Agent Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>