force-app/main/default/objects/User/fields/scrive__IsAdministrator__c.field-meta.xml
<CustomField>
    <fullName>scrive__IsAdministrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scrive Administrator</label>
    <type>Checkbox</type>
</CustomField>