force-app/main/default/objects/User/fields/scrive__PersonalNumber__c.field-meta.xml
<CustomField>
    <fullName>scrive__PersonalNumber__c</fullName>
    <label>Personal Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>