force-app/main/default/objects/User/fields/VPE_Target__c.field-meta.xml
<CustomField>
    <fullName>VPE_Target__c</fullName>
    <description>Only relevant for Manager and Director</description>
    <label>VPE Target Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>