force-app/main/default/objects/User/fields/VPE_Target_Q2__c.field-meta.xml
<CustomField>
    <fullName>VPE_Target_Q2__c</fullName>
    <description>The VPE target (only relevant for sales managers and -director)</description>
    <inlineHelpText>The VPE target (only relevant for sales managers and -director)</inlineHelpText>
    <label>VPE Target Q2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>