force-app/main/default/objects/User/listViews/Mobile_UC_Delivery.listView-meta.xml
<ListView>
    <fullName>Mobile_UC_Delivery</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Mobile &amp; UC Delivery</value>
    </filters>
    <label>Mobile &amp; UC Delivery</label>
    <language>en_US</language>
</ListView>